--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "4.16.4",
     "qs": "^6.7.0",
     "querystring": "^0.2.0",
+    "request": "^2.88.0",
     "winston": "2.3.1"
   },
   "devDependencies": {
